inoda-core/compile_errors.txt
    Checking inoda-core v0.1.0 (E:\Akhil\Stuff\inodA-Browser\inoda-core)
error[E0277]: can't compare `string_cache::Atom<EmptyStaticAtomSet>` with `PropertyName`
   --> src\css\mod.rs:591:81
    |
591 |                 if let Some(pos) = appended_styles.iter().position(|(ek, _)| ek == k) {
    |                                                                                 ^^ no implementation for `string_cache::Atom<EmptyStaticAtomSet> == PropertyName`
    |
    = help: the trait `PartialEq<PropertyName>` is not implemented for `string_cache::Atom<EmptyStaticAtomSet>`
help: the following other types implement trait `PartialEq<Rhs>`
   --> C:\Users\Electrobot\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\string_cache-0.9.0\src\atom.rs:78:10
    |
 78 | #[derive(PartialEq, Eq)]
    |          ^^^^^^^^^ `string_cache::Atom<Static>` implements `PartialEq`
    |
   ::: C:\Users\Electrobot\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\string_cache-0.9.0\src\trivial_impls.rs:28:1
    |
 28 | impl<Static: StaticAtomSet> PartialEq<str> for Atom<Static> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `string_cache::Atom<Static>` implements `PartialEq<str>`
...
 40 | impl<Static: StaticAtomSet> PartialEq<String> for Atom<Static> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `string_cache::Atom<Static>` implements `PartialEq<std::string::String>`
    = note: required for `&string_cache::Atom<EmptyStaticAtomSet>` to implement `PartialEq<&PropertyName>`

error[E0308]: mismatched types
   --> src\css\mod.rs:594:43
    |
594 |                     appended_styles.push((k.clone(), v.clone()));
    |                                           ^^^^^^^^^ expected `Atom<EmptyStaticAtomSet>`, found `PropertyName`
    |
    = note: expected struct `string_cache::Atom<EmptyStaticAtomSet>`
                 found enum `PropertyName`

error[E0277]: can't compare `string_cache::Atom<EmptyStaticAtomSet>` with `PropertyName`
   --> src\css\mod.rs:605:51
    |
605 |         .and_then(|ps| ps.iter().find(|(k, _)| *k == crate::dom::PropertyName::FontSize))
    |                                                   ^^ no implementation for `string_cache::Atom<EmptyStaticAtomSet> == PropertyName`
    |
    = help: the trait `PartialEq<PropertyName>` is not implemented for `string_cache::Atom<EmptyStaticAtomSet>`
help: the following other types implement trait `PartialEq<Rhs>`
   --> C:\Users\Electrobot\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\string_cache-0.9.0\src\atom.rs:78:10
    |
 78 | #[derive(PartialEq, Eq)]
    |          ^^^^^^^^^ `string_cache::Atom<Static>` implements `PartialEq`
    |
   ::: C:\Users\Electrobot\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\string_cache-0.9.0\src\trivial_impls.rs:28:1
    |
 28 | impl<Static: StaticAtomSet> PartialEq<str> for Atom<Static> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `string_cache::Atom<Static>` implements `PartialEq<str>`
...
 40 | impl<Static: StaticAtomSet> PartialEq<String> for Atom<Static> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `string_cache::Atom<Static>` implements `PartialEq<std::string::String>`

error[E0277]: can't compare `string_cache::Atom<EmptyStaticAtomSet>` with `PropertyName`
   --> src\css\mod.rs:621:61
    |
621 |                     .and_then(|i| i.iter().find(|(k, _)| *k == key).map(|(_, v)| v))
    |                                                             ^^ no implementation for `string_cache::Atom<EmptyStaticAtomSet> == PropertyName`
    |
    = help: the trait `PartialEq<PropertyName>` is not implemented for `string_cache::Atom<EmptyStaticAtomSet>`
help: the following other types implement trait `PartialEq<Rhs>`
   --> C:\Users\Electrobot\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\string_cache-0.9.0\src\atom.rs:78:10
    |
 78 | #[derive(PartialEq, Eq)]
    |          ^^^^^^^^^ `string_cache::Atom<Static>` implements `PartialEq`
    |
   ::: C:\Users\Electrobot\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\string_cache-0.9.0\src\trivial_impls.rs:28:1
    |
 28 | impl<Static: StaticAtomSet> PartialEq<str> for Atom<Static> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `string_cache::Atom<Static>` implements `PartialEq<str>`
...
 40 | impl<Static: StaticAtomSet> PartialEq<String> for Atom<Static> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `string_cache::Atom<Static>` implements `PartialEq<std::string::String>`

error[E0308]: mismatched types
   --> src\css\mod.rs:835:74
    |
835 | ...                   name: crate::dom::PropertyName::from_str(name_str),
    |                             ---------------------------------- ^^^^^^^^ expected `&str`, found `String`
    |                             |
    |                             arguments to this function are incorrect
    |
note: associated function defined here
   --> src\dom\mod.rs:127:12
    |
127 |     pub fn from_str(s: &str) -> Self {
    |            ^^^^^^^^ -------
help: consider borrowing here
    |
835 |                                 name: crate::dom::PropertyName::from_str(&name_str),
    |                                                                          +

error[E0308]: mismatched types
   --> src\css\mod.rs:847:66
    |
847 |                         name: crate::dom::PropertyName::from_str(name_str),
    |                               ---------------------------------- ^^^^^^^^ expected `&str`, found `String`
    |                               |
    |                               arguments to this function are incorrect
    |
note: associated function defined here
   --> src\dom\mod.rs:127:12
    |
127 |     pub fn from_str(s: &str) -> Self {
    |            ^^^^^^^^ -------
help: consider borrowing here
    |
847 |                         name: crate::dom::PropertyName::from_str(&name_str),
    |                                                                  +

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `inoda-core` (lib) due to 6 previous errors
